--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -635,22 +635,11 @@ ul.pagination .active a {
 }
 
 .bg-1 {
-  background: url("../images/home/hero.jpg");
+  background: url("../images/home/timg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 }
 
-.bg-2 {
-  background: url(../images/subscription/subscription-back.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.bg-3 {
-  background: url(../images/call-to-action/cta-background.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
 .bg-4 {
   background: #5672f9;
